<resources>
    <string name="app_name">SC</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <string name="steps_daily">Steps today: %s</string>
    <string name="goal_daily">Daily goal: %s</string>
    <string name="test">TEST</string>

    <string name="steps_weekly">Steps this week: %s</string>
    <string name="goal_weekly">Weekly goal: %s</string>
    <string name="avg_weekly">Weekly avg steps: %s </string>

    <string name="steps_monthly">Steps this month: %s</string>
    <string name="goal_monthly">Monthly goal: %s</string>
    <string name="avg_monthly">Monthly avg steps: %s </string>
</resources>